<resources>
    <string name="app_name">FarmerPortal</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="not_registered">Not_Registered?</string>
    <string name="register">REGISTER</string>
    <string name="confirm_password">Confirm_Password</string>
    <string name="already_register">Already Register?</string>
    <string name="sign_up">Sign Up</string>
    <string name="your_mobile_number">YOUR_MOBILE_NUMBER</string>
    <string name="mobile_number">MOBILE</string>
    <string name="title_activity_googlemap">Map</string>
    <string name="title_activity_google_api">Map</string>
    <string name="access_token">pk.eyJ1Ijoic2hyaWthbnRwYWRoeTE4IiwiYSI6ImNraHQxbnVoYTRmeDgydGw2eW05bnM1dDIifQ.leGCA2dGh7qfEPePNWe0HQ</string>
    <string name="start_navigating">Start Navigating</string>

</resources>
