<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:orientation="vertical"

        >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:textColor="#FF1493"
        android:background="#FFFFFF"
        android:text="FARMER PORTAL APP"/>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:layout_margin="50dp"
            app:cardMaxElevation="40dp"
            app:cardCornerRadius="30dp"

            >



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                >





                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:src="@drawable/farmer"
                    android:layout_marginTop="70dp"

                    />

                <EditText
                    android:id="@+id/edittext_username"
                    android:layout_width="190dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="#ffffff"
                    android:hint="@string/username"
                    android:padding="8dp"
                    android:drawableRight="@drawable/username"
                    />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="190dp"
                    android:layout_height="40dp"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/profile"
                    android:text="place_image"



                    />

                <EditText
                    android:id="@+id/edittext_password"
                    android:layout_width="190dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="#ffffff"
                    android:padding="8dp"
                    android:inputType="textPassword"
                    android:drawableRight="@drawable/password"
                    android:hint="@string/password"

                    />
                <EditText
                    android:id="@+id/phoneno"
                    android:background="#ffffff"
                    android:padding="8dp"
                    android:layout_width="190dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:drawableRight="@drawable/phone"
                    android:hint="@string/mobile_number"
                    />

                <EditText
                    android:id="@+id/edittext_cnf_password"
                    android:layout_width="190dp"
                    android:drawableRight="@drawable/password"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:background="#ffffff"
                    android:padding="8dp"
                    android:inputType="textPassword"
                    android:hint="@string/confirm_password" />

                <Button
                    android:id="@+id/button_register"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/sign_up"
                    android:background="#04ea00"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:id="@+id/textview_register"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:text="@string/already_register"
                        android:textColor="#ffffff"
                        />
                    <TextView
                        android:id="@+id/textview_login"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:text="@string/login"
                        android:textSize="16sp"
                        android:paddingLeft="10dp"
                        android:textStyle="bold"
                        android:textColor="#04ea00"

                        />


                </LinearLayout>













            </LinearLayout>



        </androidx.cardview.widget.CardView>





    </LinearLayout>

</RelativeLayout>