<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"


        >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:orientation="vertical"

        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:textColor="#FF1493"
            android:background="#FFFFFF"
            android:text="FARMER PORTAL APP"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:layout_margin="50dp"
            app:cardMaxElevation="40dp"
            app:cardCornerRadius="30dp"

            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="120dp"
                    android:src="@drawable/farmer"
                    android:layout_marginTop="30dp"/>

                <EditText
                    android:id="@+id/edittext_username"
                    android:layout_width="190dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:background="#ffffff"
                    android:hint="@string/username"
                    android:padding="8dp"
                    android:drawableRight="@drawable/username"


                    />

                <EditText
                    android:id="@+id/edittext_password"
                    android:layout_width="190dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:background="#ffffff"
                    android:padding="8dp"
                    android:inputType="textPassword"
                    android:drawableRight="@drawable/password"
                    android:hint="@string/password" />
                <Spinner
                    android:layout_marginTop="20dp"
                    android:id="@+id/spinner"
                    android:layout_width="190dp"
                    android:layout_height="40dp"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown"/>




                <Button
                    android:id="@+id/button_login"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/login"
                    android:background="#04ea00"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">
                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:text="@string/not_registered"
                        android:textColor="#ffffff"
                        />
                    <TextView
                        android:id="@+id/textview_register"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:text="@string/register"

                        android:textStyle="bold"
                        android:textColor="#04ea00"
                        />


                </LinearLayout>



            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>



</RelativeLayout>